# Olegsmm

./: .gitignore  calc.py  greeting.py  main.py  master.txt
crudapp_migrate/: env  requerements.txt  run.py
crudapp_migrate/poetry-migrate/: Untitle.ipynb  config.py  pip_list.txt  poetry-env-list.txt  pyproject.toml  run.py  seed_rel.py
crudapp_migrate/poetry-migrate/instance/: db.sqlite3
crudapp_migrate/poetry-migrate/migrations/versions/: 1dbff8e033a6_add_rel.py  d45430b23b84_add_db.py
crudapp_migrate/poetry-migrate/models/: model.py
test/: labirint.py  test_labirint.py
